# ECU_ZUR

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
.config/: CanFrames.json  CanInitFrames.json  CanMapping.json  senMLConfig.json  settings.json
.kernel/BCT/: tegra234-mb1-bct-padvoltage-p3767-0000-anyvision.dtsi  tegra234-mb1-bct-pinmux-p3767-0000-anyvision.dtsi  tegra234-mb2-bct-misc-p3767-0000-anyvision.dts
.module/: 6.5.24_dmesg.txt  mcp251x.c  mcp251x.ko  readme.txt
Doc/: Docker_cheatsheet.md  Jetson_config.md  Jetson_flashing.md  Terminal_comands.md
Tests/: CMakeLists.txt  ControlSystem_test.cpp  Max_framerate.sh
Tests/Unit_Tests/: AccumulatorManagement_Test.cpp  CMakeLists.txt  CanFrameBuilder_Test.cpp  CanInitTest.json  CanStructMapper_Test.cpp  DataMapper_Test.cpp  Error_Test.cpp  LedButton_Test.cpp  MotorController_test.cpp  PedalBox_Test.cpp  Steering_Test.cpp  Timer_Test.cpp  senMLConfigTest.json
aws_pipeline/: Dockerfile  buildspec_build.yml
include/: Data.hpp  EcuException.hpp  Error.hpp  LogManager.hpp  Profiling.hpp  ProfilingManager.hpp  ProfilingTimer.hpp  System.hpp  Timer.hpp  log.hpp  main.hpp
include/data/: CAN.hpp  CanFrameBuilder.hpp  CanStructMapper.hpp  DataMapper.hpp  Terminal.hpp  database.hpp  ecuJson.hpp
include/data/server/: Datalogger.hpp  Diagnostic.hpp  Display.hpp  Driverless.hpp  UDP.hpp
include/system/: AccumulatorManagement.hpp  DV_PedalBox.hpp  LedButtonBox.hpp  MotorController.hpp  MotorControllerStates.hpp  PedalBox.hpp  PedalBoxStates.hpp  State.hpp  Steering.hpp  SteeringStates.hpp  arrayCompareLogic.hpp  throttleLogic.hpp
scripts/: add_alias.sh  ecu_deinstall.sh  ecu_install.sh  enable_can.sh  enable_jetson_can.sh  enable_vcan.sh  log.sh  remove_alias.sh  run.sh
source/: Data.cpp  Error.cpp  LogManager.cpp  ProfilingTimer.cpp  System.cpp  Timer.cpp  main.cpp
source/data/: CAN.cpp  CanFrameBuilder.cpp  CanStructMapper.cpp  DataMapper.cpp  Terminal.cpp  ecuJson.cpp
source/data/server/: Datalogger.cpp  Diagnostic.cpp  Display.cpp  Driverless.cpp  UDP.cpp
source/system/: AccumulatorManagement.cpp  DV_PedalBox.cpp  LedButtonBox.cpp  MotorController.cpp  MotorControllerStates.cpp  PedalBox.cpp  PedalBoxStates.cpp  Steering.cpp  SteeringStates.cpp  arrayCompareLogic.cpp  throttleLogic.cpp
